destintionrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: jsonplaceholder-tls-origination
  namespace: curl-egress-tst
spec:
  host: jsonplaceholder.typicode.com
  trafficPolicy:
    tls:
      mode: SIMPLE #TLS origination
      sni: jsonplaceholder.typicode.com
