virtualservice-workload.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jsonplaceholder-egress
  namespace: curl-external-tst
spec:
  hosts:
  - jsonplaceholder.typicode.com
  gateways:
  - mesh
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: curl-egress-tst.curl-egress-tst.svc.cluster.local
        port:
          number: 80
